--- a/bin/Profiles/AllUsers/Configuration/IdeMainForm.config
+++ b/bin/Profiles/AllUsers/Configuration/IdeMainForm.config
@@ -7,7 +7,7 @@
     <Content ID="1" PersistString="Krkal.Ide.SolutionExplorer,Mini Krkal_FA9B_397F_FDFB_B96B.kcp,True" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
     <Content ID="2" PersistString="Krkal.Ide.ClassView" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
     <Content ID="3" PersistString="Krkal.Ide.NameView" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
-    <Content ID="4" PersistString="Krkal.RunIde.Builder,CreateDataFile,Release,C:\WINDOWS\Microsoft.NET\Framework\v3.5\" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
+    <Content ID="4" PersistString="Krkal.RunIde.Builder,CreateDataFile,Release,c:\Program Files (x86)\MSBuild\12.0\Bin" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
     <Content ID="5" PersistString="Krkal.Ide.KrkalCodeDocument,Root1_4B7D_9CCA_1E1A_EDCB.kcp" AutoHidePortion="0.25" IsHidden="False" IsFloat="False" />
   </Contents>
   <Panes Count="7">
